--- a/content/addobject.ipynb
+++ b/content/addobject.ipynb
@@ -9,6 +9,7 @@
    },
    "outputs": [],
    "source": [
+    "%pip install ipyniivue\n",
     "import ipyniivue\n",
     "\n",
     "%pip install nibabel\n",
