--- a/content/custom_code.ipynb
+++ b/content/custom_code.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install ipyniivue\n",
     "import ipyniivue\n",
     "nv = ipyniivue.Niivue()"
    ]
