--- a/content/draw.ipynb
+++ b/content/draw.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install ipyniivue\n",
     "from ipyniivue import Niivue\n",
     "import ipywidgets as widgets"
    ]
